feat: continue cssMemeSlider

--- a/cssMemeSlider/index.html
+++ b/cssMemeSlider/index.html
@@ -7,6 +7,47 @@
     <title>cssMemeSlider</title>
 </head>
 <body>
+    <div class="slider">
+        <div class="container">
+            <div class="slides">
+                <div class="slide1">
+                    <img src="images/dog.jpg" alt="dog">
+                    <div class="text">
+                        Я лучший!
+                    </div>
+                </div>
+                <div class="slide2">
+                    <img class="img" src="images/dog2.jpg" alt="dog">
+                    <div class="text">
+                        Нет я!
+                    </div>
+                </div>
+                <div class="slide3">
+                    <img class="img"  src="images/dog3.jpg" alt="dog">
+                    <div class="text">
+                        Я так не думаю!
+                    </div>
+                </div>
+                <div class="slide4">
+                    <img class="img"  src="images/cat.jpg" alt="cat">
+                    <div class="text">
+                        Все по норам кот в здании!
+                    </div>
+                </div>
+            </div>
+            <div class="controls">
+                <input type="radio" name="radio" id="btn1" checked>
+                <input type="radio" name="radio" id="btn2" >
+                <input type="radio" name="radio" id="btn3" >
+                <input type="radio" name="radio" id="btn4" >
 
+                <label class="label" for="btn1"></label>
+                <label class="label" for="btn2"></label>
+                <label class="label" for="btn3"></label>
+                <label class="label" for="btn4"></label>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
